# ishutools

./: .replit  README.md  main.py  pyproject.toml  replit.md  replit.nix
.agents/memory/: MEMORY.md  card-visibility.md  import-quirks.md
attached_assets/: Pasted--each-and-every-tools-ke-liye-tumko-jitna-jada-libraies_1781705256436.txt  ishutools_read_it_pls_1781719136041.md
backend/: app.py  requirements.txt
backend/tools/: __init__.py  excel_to_pdf.py  html_to_pdf.py  img_to_pdf.py  pdf_compare.py  pdf_compress.py  pdf_crop.py  pdf_edit.py  pdf_extract_pages.py  pdf_forms.py  pdf_merge.py  pdf_ocr.py  pdf_optimize.py  pdf_organize.py  pdf_page_numbers.py  pdf_protect.py  pdf_redact.py  pdf_remove_pages.py  pdf_repair.py  pdf_rotate.py  pdf_scan.py  pdf_sign.py  pdf_split.py  pdf_summarize.py  pdf_to_excel.py  pdf_to_img.py  pdf_to_pdfa.py  pdf_to_pptx.py  pdf_to_word.py  pdf_translate.py  pdf_unlock.py  pdf_watermark.py  pptx_to_pdf.py  word_to_pdf.py
frontend/: index.html  llms.txt
frontend/ishu-kumar/: index.html
frontend/static/css/: main.css  tool-base.css
frontend/static/js/: main.js  tool-base.js
frontend/tools/add-page-numbers/: index.html
frontend/tools/add-watermark/: index.html
frontend/tools/ai-summarizer/: index.html
frontend/tools/compare-pdf/: index.html
frontend/tools/compress-pdf/: index.html  script.js  style.css
frontend/tools/crop-pdf/: index.html
seo/: llms.txt  robots.txt  sitemap-compress-pdf.xml  sitemap-index.xml  sitemap-ishu-kumar.xml  sitemap-merge-pdf.xml  sitemap-split-pdf.xml  sitemap-tools.xml  sitemap.xml
(+34 files in other folders)
