[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.4.0",
    "cryptography>=49.0.0",
    "deep-translator>=1.11.4",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "flask-sqlalchemy>=3.1.1",
    "fpdf2>=2.8.7",
    "gunicorn>=26.0.0",
    "img2pdf>=0.6.3",
    "mammoth>=1.12.0",
    "openpyxl>=3.1.5",
    "pdf2docx>=0.5.13",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    "pdfrw>=0.4",
    "pikepdf>=10.8.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.13.2",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "tabula-py>=2.10.0",
    "weasyprint>=69.0",
    "werkzeug>=3.1.8",
]
